appId: com.example.browsermaestrotesting
---
- launchApp

- tapOn:
    text: "Open Wikipedia"

- waitForAnimationToEnd:
    timeout: 5000

- assertVisible:
    text: "Wikipedia"

- tapOn: English

- assertVisible: From today's featured article
